# clip_viewer

./: .gitignore  README.md  __init__.py  pyproject.toml  run.sh
clip_viewer/: clip_model.py  data.py  distance_viewer.py  main.py  utils.py  viewer.py  visu_distance.py
clip_viewer/models/: __init__.py  base_model.py  clip_model.py  siglip_model.py
